# minimo

./: .gitmodules  CMakeLists.txt
.github/workflows/: build.yml
docs/: random.md
include/mnm/: geometry.h  io.h  mnm.h  window.h
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app.cpp
src/cmake/: add_shader_dependency.cmake
src/common/: mnm_array.h  mnm_utf8.h
src/editor/: CMakeLists.txt  editor.cpp  editor_font.h  editor_gui.h  editor_tcc.h  editor_ted.h  editor_textedit.h  editor_ui.h  font.h  mnm_editor_parser.h  mnm_text_editor_state.cpp  mnm_text_editor_state.h  mnm_utf8.h  ted.cpp  ted.h  ted2.cpp  ted2.h  tmp.h
src/editor/shaders/: text.fs  text.vs
src/lib/: CMakeLists.txt  common.h  mnm.cpp  mnm.h  mnm.mm  mnm2.cpp  mnm_allocator.h  mnm_array.h  mnm_base.h  mnm_consts.h  mnm_font_atlas.h  mnm_includes.h  mnm_input.h  mnm_instancing.h  mnm_mesh_cache.h  mnm_mesh_recorder.h  mnm_platform.cpp  mnm_rwr.cpp  mnm_shaders.h  mnm_stack.h  mnm_texture_cache.h  mnm_utf8.h  mnm_vertex_attribs.h  mnm_vertex_layout.h  mnm_vertex_submission.h  mnm_window.h  tmp.txt  window.cpp
src/lib/cmake/: add_shader_dependency.cmake  shader.h.in
src/lib/rwr/: CMakeLists.txt  font_input_mono.h  font_segoe_ui.h  mnm.natvis  mnm_rwr.cpp  mnm_rwr_editor.cpp  mnm_rwr_lib.cpp  mnm_rwr_lib_tests.cpp  mnm_rwr_test.cpp  mnm_rwr_utf8.h
src/lib/shaders/: instancing_position_color.vs  position.vs  position_2d_color_texcoord.vs  position_color.vs  position_color_r_pixcoord.fs  position_color_r_texcoord.fs  position_color_texcoord.fs  position_normal.fs  position_normal.vs  position_texcoord.fs  varying.def.sc  varying_2d.def.sc
src/test/: CMakeLists.txt  custom_shader.c  element_range.c  fira_code_regular.h  font_atlas.c  hello_triangle.c  instanced_geometry.cpp  instancing.c  normals.c  normals_autogen.c  normals_colors.c  offscreen.c  static_geometry.c  static_geometry.cpp  test.cpp  texture_readback.c  textured_geometry.cpp  textured_triangle.c  transient_geometry.c  transient_geometry.cpp  vertex_alias.c  wireframe_triangle.c
tools/binary_to_compressed_c/osx/: binary_to_compressed_c  build.sh
tools/shaderc/windows/: build.bat
tools/tree_sitter_helper/: tree_sitter_helper.py
